testdata/invalid/indirect_recursive_struct.hzn
package probes

type Parent struct {
    child Child
}

type Child struct {
    parent Parent
}
